improvement on script and testing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- <button id="cool">Hello 1</button> -->
-    <a href="#">Hi 1</a>
+    <a href="https://www.google.com" target="_blank">Hi 1</a>
     <button>Hello 2</button>
     <a href="#">Hi 2</a>
     <button id="cool">Hello 1</button>
@@ -18,7 +18,8 @@
       class="quick-link toyotaone-url"
       oneintegration=""
       signaltag=""
-      href="#"
+      href="what.html"
+      target="_blank"
       tabindex="0"
     >
       <span _ngcontent-c7="">PODÍVEJTE SE Z DOMOVA</span>
